# fds-heat

./: LICENSE  README.md  pyproject.toml
examples/: simple_example.py
src/heat_solver/: __init__.py  solver.py
tests/: test_solver.py
